<resources>
    <string name="app_name">Stories</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a Member?</string>
    <string name="sing_up">Sing up</string>
    <string name="ofline_mode">Ofline Mode</string>
    <string name="name">Full Name</string>
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="verefection">an email has been sent to you , please check it </string>
    <string name="ayoub_aitouna">Ayoub Aitouna</string>
    <string name="what_s_on_your_mind">what\'s on your mind</string>
    <string name="upload">Upload</string>
    <string name="comment">Comment</string>
    <string name="todo">todo</string>
    <string name="remove_from_freind_s_list">Remove</string>
    <string name="message">Message</string>
    <string name="add_freind">Add freind</string>
    <string name="it_s_an_comment">Comment</string>

</resources>
