<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.profile_">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/background_image"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="center"
                    android:src="@drawable/background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/todo" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/home"
                app:civ_border_color="#000000"
                app:civ_border_overlay="true"
                app:civ_border_width="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/background"
                app:layout_constraintEnd_toEndOf="@+id/background"
                app:layout_constraintStart_toStartOf="@+id/background"
                app:layout_constraintTop_toBottomOf="@+id/background" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_red"
                android:text="@string/remove_from_freind_s_list"
                android:textAllCaps="false"
                android:textColor="#FFFCFC"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/rounded"
                android:text="@string/message" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
