<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activities.add">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_person_black_24dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/name_profile"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/ayoub_aitouna"
            android:textColor="#000"
            android:textSize="19sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/what_s_on_your_mind" />

    <ImageView
        android:id="@+id/image_"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="center"
        android:src="@drawable/rounded" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/upload_button"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="10"
            android:background="@drawable/rounded"
            android:elevation="15dp"
            android:text="@string/upload"
            android:textColor="#000"
            tools:ignore="NestedWeights" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/image" />


    </LinearLayout>

</LinearLayout>