<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCFFFFFF"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/background_image"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="center"
                        android:src="@drawable/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/edit"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="#FFF"
                        android:src="@drawable/pen"
                        app:layout_constraintBottom_toBottomOf="@+id/background_image"
                        app:layout_constraintEnd_toEndOf="@+id/background_image"
                        app:layout_constraintHorizontal_bias="0.955"
                        app:layout_constraintStart_toStartOf="@+id/background_image"
                        app:layout_constraintTop_toTopOf="@+id/background_image"
                        app:layout_constraintVertical_bias="0.771" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/home"
                    app:civ_border_color="#000000"
                    app:civ_border_overlay="true"
                    app:civ_border_width="3dp"
                    app:layout_constraintBottom_toBottomOf="@+id/background"
                    app:layout_constraintEnd_toEndOf="@+id/background"
                    app:layout_constraintStart_toStartOf="@+id/background"
                    app:layout_constraintTop_toBottomOf="@+id/background" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ayoub_aitouna"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/add"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded"
                        android:text="@string/add_freind"
                        android:textColor="#000" />

                    <Button
                        android:id="@+id/erdit"
                        android:layout_width="120dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:background="@drawable/rounded"
                        android:text="@string/message" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/profile_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>